--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -35,54 +35,19 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-  build_and_push_trusty:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: docker/metadata-action@v3
-        id: meta
-        with:
-          images: |
-            anyakichi/yocto-builder
-            ghcr.io/anyakichi/yocto-builder
-          tags: trusty-master
-      - if: github.ref == 'refs/heads/main'
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - if: github.ref == 'refs/heads/main'
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: Dockerfile.trusty
-          push: ${{ github.ref == 'refs/heads/main' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
   build_and_push:
     runs-on: ubuntu-latest
-    needs: [build_and_push_ubuntu, build_and_push_trusty]
+    needs: [build_and_push_ubuntu]
     env:
       DEFAULT_PAIRS:
-        trusty-daisy trusty-dizzy trusty-fido trusty-jethro
         xenial-krogoth xenial-morty xenial-pyro xenial-rocko xenial-sumo
         bionic-thud bionic-warrior bionic-zeus bionic-dunfell
         focal-gatesgarth focal-hardknott focal-honister focal-kirkstone
     strategy:
       matrix:
-        base: [trusty, xenial, bionic, focal]
+        base: [xenial, bionic, focal]
         branch:
           [
-            daisy,
-            dizzy,
-            fido,
-            jethro,
             krogoth,
             morty,
             pyro,
