Move Dockerfile to Dockerfile.env

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -93,6 +93,7 @@ jobs:
       - uses: docker/build-push-action@v2
         with:
           context: .
+          file: Dockerfile.env
           push: ${{ github.ref == 'refs/heads/main' }}
           build-args: |
             base=${{ matrix.base }}-master
