--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,7 @@
 name: Publish Docker image
 on: [push]
 jobs:
-  build_and_push_ubuntu:
+  build_and_push_base:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -29,7 +29,6 @@ jobs:
       - uses: docker/build-push-action@v2
         with:
           context: .
-          file: Dockerfile.ubuntu
           push: ${{ github.ref == 'refs/heads/main' }}
           build-args: ubuntu_version=${{ matrix.version }}
           tags: ${{ steps.meta.outputs.tags }}
@@ -37,7 +36,7 @@ jobs:
 
   build_and_push:
     runs-on: ubuntu-latest
-    needs: [build_and_push_ubuntu]
+    needs: [build_and_push_base]
     env:
       DEFAULT_PAIRS:
         xenial-krogoth xenial-morty xenial-pyro xenial-rocko xenial-sumo
