--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,5 +1,8 @@
 name: Publish Docker image
-on: [push]
+on:
+  push:
+  schedule:
+    - cron: '40 15 1 * *'
 jobs:
   build_and_push_base:
     runs-on: ubuntu-latest
