ci: Set on.workflow_dispatch

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,6 +3,7 @@ on:
   push:
   schedule:
     - cron: '40 15 1 * *'
+  workflow_dispatch:
 jobs:
   build_and_push_base:
     runs-on: ubuntu-latest
