--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,14 +2,14 @@ name: Publish Docker image
 on:
   push:
   schedule:
-    - cron: '40 15 1 * *'
+    - cron: "40 15 1 * *"
   workflow_dispatch:
 jobs:
   build_and_push_base:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [xenial, bionic, focal]
+        version: [xenial, bionic, focal, jammy, noble]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -40,70 +40,39 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-  build_and_push_trusty:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-      - uses: docker/metadata-action@v5
-        id: meta
-        with:
-          images: |
-            anyakichi/yocto-builder
-            ghcr.io/anyakichi/yocto-builder
-          tags: trusty-master
-      - if: github.ref == 'refs/heads/main'
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - if: github.ref == 'refs/heads/main'
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: Dockerfile.trusty
-          push: ${{ github.ref == 'refs/heads/main' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
   build_and_push:
     runs-on: ubuntu-latest
-    needs: [build_and_push_base, build_and_push_trusty]
+    needs: [build_and_push_base]
     env:
       DEFAULT_PAIRS:
-        trusty-daisy trusty-dizzy trusty-fido trusty-jethro
         xenial-krogoth xenial-morty xenial-pyro xenial-rocko xenial-sumo
         bionic-thud bionic-warrior bionic-zeus bionic-dunfell
         focal-gatesgarth focal-hardknott focal-honister focal-kirkstone
+        jammy-langdale jammy-nanbield jammy-scarthgap jammy-styhead
+        noble-styhead noble-walnascar
     strategy:
       matrix:
-        base: [trusty, xenial, bionic, focal]
+        base: [xenial, bionic, focal, jammy, noble]
         branch:
-          [
-            daisy,
-            dizzy,
-            fido,
-            jethro,
-            krogoth,
-            morty,
-            pyro,
-            rocko,
-            sumo,
-            thud,
-            warrior,
-            zeus,
-            dunfell,
-            gatesgarth,
-            hardknott,
-            honister,
-            kirkstone,
-          ]
+          - krogoth
+          - morty
+          - pyro
+          - rocko
+          - sumo
+          - thud
+          - warrior
+          - zeus
+          - dunfell
+          - gatesgarth
+          - hardknott
+          - honister
+          - kirkstone
+          - langdale
+          - mickledore
+          - nanbield
+          - scarthgap
+          - styhead
+          - walnascar
     steps:
       - run: |
           tag="${{ matrix.base }}-${{ matrix.branch }}"
