--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,8 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [xenial, bionic, focal, jammy, noble]
+        base: [ubuntu:xenial, ubuntu:bionic, ubuntu:focal, ubuntu:jammy, ubuntu:noble]
     steps:
+      - id: tags
+        run: |
+          base="${{ matrix.base }}"
+          echo "tags=${base##*:}-main" >> "$GITHUB_OUTPUT"
       - uses: actions/checkout@v4
         with:
           submodules: true
@@ -20,7 +24,7 @@ jobs:
           images: |
             anyakichi/yocto-builder
             ghcr.io/anyakichi/yocto-builder
-          tags: ${{ matrix.version }}-master
+          tags: ${{ steps.tags.outputs.tags }}
       - if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v3
         with:
@@ -32,11 +36,53 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v5
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/build-push-action@v6
         with:
           context: .
           push: ${{ github.ref == 'refs/heads/main' }}
-          build-args: ubuntu_version=${{ matrix.version }}
+          build-args: ubuntu_version=${{ matrix.base }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+  build_and_push_fedora:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        base: [fedora, almalinux:8, almalinux:9]
+    steps:
+      - id: tags
+        run: |
+          base="${{ matrix.base }}"
+          echo "tags=${base/:/}-main" >> "$GITHUB_OUTPUT"
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+      - uses: docker/metadata-action@v5
+        id: meta
+        with:
+          images: |
+            anyakichi/yocto-builder
+            ghcr.io/anyakichi/yocto-builder
+          tags: ${{ steps.tags.outputs.tags }}
+      - if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile.fedora
+          push: ${{ github.ref == 'refs/heads/main' }}
+          build-args: base=${{ matrix.base }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
@@ -52,7 +98,7 @@ jobs:
         noble-styhead noble-walnascar
     strategy:
       matrix:
-        base: [xenial, bionic, focal, jammy, noble]
+        base: [xenial, bionic, focal, jammy, noble, fedora, almalinux8, almalinux9]
         branch:
           - krogoth
           - morty
@@ -103,13 +149,14 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v5
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile.env
           push: ${{ github.ref == 'refs/heads/main' }}
           build-args: |
-            base=${{ matrix.base }}-master
+            base=${{ matrix.base }}-main
             yocto_branch=${{ matrix.branch }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
